# OpenGLES3_0NDKDemo

./: .gitignore  README.md  settings.gradle
ANDROID_SDK_HOME/: analytics.settings
app/: build.gradle
app/src/androidTest/java/com/zfang/opengles3_0ndk/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  Opengles3_0ndk.cpp
app/src/main/cpp/base/: GLSampleBase.h
app/src/main/cpp/glm-0.9.9.8/ext/: matrix_transform.hpp
app/src/main/cpp/glm-0.9.9.8/gtc/: quaternion.hpp
app/src/main/cpp/learnog/: BloomBlurSample.cpp  BloomBlurSample.h  Camera.cpp  Camera.h  ColorBlendTestSample.cpp  ColorBlendTestSample.h  CubeMapTextureSample.cpp  CubeMapTextureSample.h  DeferredShadingSample.cpp  DeferredShadingSample.h  DepthBufferTestSample.cpp  DepthBufferTestSample.h  DirectionalLightSample.cpp  DirectionalLightSample.h  FaceCullingSample.cpp  FaceCullingSample.h  FrameBufferSample.cpp  FrameBufferSample.h  GLSLSample.cpp  GLSLSample.h  GammaCorrectionSample.cpp  GammaCorrectionSample.h  HDRToneMappingSample.cpp  HDRToneMappingSample.h  InstancingArraySample.cpp  InstancingArraySample.h  InstancingAsteroidArraySample.cpp  InstancingAsteroidArraySample.h  InstancingAsteroidIDSample.cpp  InstancingAsteroidIDSample.h  InstancingIDSample.cpp  InstancingIDSample.h  LightingColorSample.cpp  LightingColorSample.h  LightingSampleBase.cpp  LightingSampleBase.h  MultiLightsSample.cpp  MultiLightsSample.h  NormalMappingSample.cpp  NormalMappingSample.h  (+26 more)
app/src/main/cpp/learnog/shader/: color.fs
app/src/main/cpp/model/: AssimpShader.h  mesh.h  model.h
app/src/main/cpp/render/: EGLRender.cpp  EGLRender.h  MyGLRenderContext.cpp  MyGLRenderContext.h
app/src/main/cpp/sample/: BasicLightingSample.cpp  BasicLightingSample.h  BlendingSample.cpp  BlendingSample.h  CoordinateSystemSample.cpp  CoordinateSystemSample.h  FBOLegLengthenSample.cpp  FBOLegLengthenSample.h  FBOSample.cpp  FBOSample.h  GeometryInstanced.cpp  GeometryInstanced.h  Model3DSample.cpp  Model3DSample.h  MultiLightsSample2.cpp  MultiLightsSample2.h  NV21TextureMapSample.cpp  NV21TextureMapSample.h  SkyBoxSample.cpp  SkyBoxSample.h  TextureMapSample.cpp  TextureMapSample.h  TransformFeedbackSample.cpp  TransformFeedbackSample.h  TriangleSample.cpp  TriangleSample.h  VBOSample.cpp  VBOSample.h  VaoSample.cpp  VaoSample.h
app/src/main/cpp/utils/: GLUtils.cpp  GLUtils.h  ImageDef.h  LogUtil.h  MyLock.h
app/src/main/java/com/zfang/opengles3_0ndk/: CommonUtils.java  GLSurfaceView.kt  MainActivity.kt  MyGLRender.java  MyGLSurfaceView.kt  MyNativeRender.kt
app/src/main/res/layout/: activity_main.xml  sample_selected_layout.xml
app/src/main/res/menu/: menu_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/zfang/opengles3_0ndk/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
(+4 files in other folders)
